# SimpleInterpreter

./: CMakeLists.txt  README.md  main.cpp
res/: complex_expressions.txt  expressions.txt  expressions_with_paranthesis.txt  invalid_expressions.txt
scripts/: new_class.sh  new_folder.sh
src/: CMakeLists.txt
src/IO/: CMakeLists.txt
src/IO/src/: FileReader.cpp  FileReader.hpp
src/List/: CMakeLists.txt
src/List/src/: List.hpp
src/Lock/: CMakeLists.txt
src/Lock/src/: Lock.cpp  Lock.hpp
src/Parser/: CMakeLists.txt
src/Parser/src/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp
src/Parser/src/SyntaxNodes/: Expression.cpp  Expression.hpp  ExpressionType.hpp  StringExpression.cpp  StringExpression.hpp
src/Parser/src/Tokens/: IToken.cpp  IToken.hpp  NumericLiteralToken.cpp  NumericLiteralToken.hpp  OperatorToken.cpp  OperatorToken.hpp  ParenthesisToken.cpp  ParenthesisToken.hpp  TokenType.hpp
src/Runner/: CMakeLists.txt
src/Runner/src/: Runner.cpp  Runner.hpp
src/Stack/: CMakeLists.txt
src/Stack/src/: Stack.hpp
